--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,17 @@
   "author": "Saleh Sargolzaee",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "antd": "^4.16.13",
+    "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-toastify": "^8.0.3"
   }
 }
