--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-toastify": "^8.0.3"
   }
 }
