--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "moment": "^2.29.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
     "react-toastify": "^8.0.3"
   }
 }
