--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
