--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-toastify": "^8.0.3"
