--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
-    "react-toastify": "^8.0.3"
+    "react-toastify": "^8.0.3",
+    "socket.io-client": "^4.4.0"
   }
 }
