--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.30"
+    "nanoid": "^3.1.30",
+    "socket.io": "^4.4.0"
   }
 }
