--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-toastify": "^8.0.3",
+    "react-use": "^17.3.1",
     "socket.io-client": "^4.4.0"
   }
 }
